# tor-headless-automation

./: .dockerignore  .env.example  .gitignore  README.md  auto_repeat_in_docker.bat  auto_repeat_in_local.bat  pyproject.toml
docker/: Dockerfile  docker-compose.yml  run_docker_setup.bat
docs/: SIMPLE_AUTOMATION_GUIDE.md  disk_space_optimization.md  multi_url_example.txt
src/tor_browser_automation/: docker_main.py  main.py  repeater.py  run_once_in_local.bat
